--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.2.2",
     "@sanity/client": "^6.24.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
